2007-01-28  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* FvwmScript/script.y:
	* FvwmScript/scanner.l:
	* FvwmScript/scanner.c:
	added GPL notice

	* FvwmCommand/FvwmCommand.h:
	* FvwmGtk/FvwmGtk.c:
	* FvwmSaveDesk/FvwmSaveDesk.h:
	* FvwmSave/FvwmSave.h:
	* FvwmWinList/FvwmWinList.h:
	#includes from fvwm path with "..." not <...>

	* FvwmBanner/FvwmBanner.c:
	* FvwmButtons/FvwmButtons.c:
	* FvwmCommand/FvwmCommand.h:
	* FvwmDebug/FvwmOldDebug.h:
	* FvwmEvent/FvwmEvent.c:
	* FvwmForm/FvwmForm.c:
	* FvwmGtk/FvwmGtk.c:
	* FvwmGtk/expand.c:
	* FvwmIconMan/fvwm.c:
	* FvwmM4/FvwmM4.h:
	* FvwmPager/x_pager.c:
	* FvwmSave/FvwmSave.h:
	* FvwmSaveDesk/FvwmSaveDesk.h:
	* FvwmTaskBar/ButtonArray.h:
	* FvwmTaskBar/Mallocs.c:
	* FvwmWinList/ButtonArray.h:
	* FvwmWinList/FvwmWinList.h:
	#includes from library path with "..." not <...>

2007-01-27  Serge Koksharov  <gentoosiast dog yandex dot ru>

	* FvwmIconMan/debug.c:
	moved contents of `debuglevels.h' here.
	don't include `debuglevels.h'.

	* FvwmIconMan/FvwmIconMan.1.in:
	updated description of `printdebug' option.

	* FvwmIconMan/Makefile.am:
	removed debuglevels.h from build list.

	* FvwmIconMan/debuglevels.h:
	removed file.

	* FvwmIconMan/debug.c:
	* FvwmIconMan/debug.h:
	removed MEM debug flag which isn't used anywhere in the code.

	* FvwmIconMan/FvwmIconMan.c (main):
	s/SendInfo/SendText/.
	use `GetFileNameFromPath' function from libs to get module name.
	include "libs/Parse.h" which provides `GetFileNameFromPath' function.

	* FvwmIconMan/readconfig.c:
	put local header includes in double quotes instead of angle brackets.

	* FvwmIconMan/readconfig.h:
	* FvwmIconMan/FvwmIconMan.h:
	prevented multiple inclusions of this header files.

	* FvwmIconMan/xmanager.h:
	removed `FONT_STRING' definition.

	* FvwmIconMan/x.c (X_init_manager):
	if font wasn't specified use fallback mechanism of FlocaleLoadFont,
	not hardcoded FONT_STRING.

	* FvwmIconMan/FvwmIconMan.h:
	* FvwmIconMan/winlist.c (check_resolution):